<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">

    <TextView
        android:id="@+id/appDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/startForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/start_button"/>

    <Button
        android:id="@+id/stopForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startForeground"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/stop_button"/>

</RelativeLayout>