<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.SettingsActivity">

    <TextView
        android:id="@+id/startOnBootHeader"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/startOnBootHeader"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:id="@+id/bootSwitch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_toEndOf="@id/startOnBootHeader"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/bootDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bootSwitch"
        android:text="@string/bootDescription"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/delayHeader"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/bootDescription"
        android:gravity="center"
        android:text="@string/touch_delay_header"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@id/bootDescription"
        android:gravity="center"
        android:layout_toEndOf="@id/delayHeader"
        android:layout_marginTop="30dp"
        android:entries="@array/delay_arrays"/>

    <TextView
        android:id="@+id/delayDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner1"
        android:text="@string/delay_description"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

</RelativeLayout>